--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.5.4",
     "next-sanity": "^11.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
