--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
     "@vercel/stega": "^0.1.2",
+    "clsx": "^2.1.1",
     "next": "15.5.4",
     "next-sanity": "^11.4.2",
     "react": "19.1.0",
