--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@danwilson282/mkj-component-library": "^0.1.4",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
     "@vercel/stega": "^0.1.2",
+    "clsx": "^2.1.1",
     "next": "15.5.4",
     "next-sanity": "^11.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
