--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@danwilson282/mkj-component-library": "^0.1.4",
+    "@prisma/client": "^6.17.1",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
     "@vercel/stega": "^0.1.2",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "15.5.4",
+    "next-auth": "^4.24.11",
     "next-sanity": "^11.4.2",
+    "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
@@ -23,6 +27,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
