--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.0",
     "@danwilson282/mkj-component-library": "^0.1.4",
     "@prisma/client": "^6.17.1",
     "@sanity/client": "^7.12.0",
@@ -19,6 +20,7 @@
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "next-sanity": "^11.4.2",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -29,6 +31,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
