--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix"
+    "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
+     "test": "NODE_ENV=test jest --runInBand",
+     "studio": "npx prisma studio",
+     "studio:test": "DATABASE_URL='file:./test.db' npx prisma studio"
+  },
+  "type": "module",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
     "@danwilson282/mkj-component-library": "^0.1.13",
+    "@faker-js/faker": "^10.1.0",
     "@prisma/client": "^6.17.1",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
@@ -31,6 +39,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
@@ -42,9 +51,12 @@
     "eslint-config-next": "^15.5.4",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^29.7.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.14",
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
