--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest": "^29.7.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "prisma-erd-generator": "^2.1.0",
     "tailwindcss": "^4.1.14",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
